# lobbys

./: .dockerignore  .gitlab-ci.yml  .pre-commit.yaml  .travis.yml  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
app/: package-lock.json  settings.py  urls.py
app/assets/css/: lobbys.css
app/managers/: models.py  serializer.py  urls.py  views.py
app/managers/migrations/: 0001_initial.py
app/player/: api.py  apps.py  models.py  serializer.py
app/player/tests/: test_api.py
app/players/: apps.py  models.py  serializer.py  urls.py  views.py
app/players/migrations/: 0001_initial.py
app/user/: api.py  channels.py  models.py  serializer.py  urls.py  views.py
app/user/migrations/: 0001_add_basic_sctruture_version_one.py  0001_basic_version_lobbys.py  0001_initial.py  0002_add_guild_models.py  0002_alter_usermodel_profession.py  0002_auto_20210830_1358.py  0002_auto_20210907_0827.py  0003_add_add_choices_user.py
app/user/templates/: campeonatos.html  dashboard.html  icons.html  login.html  map.html  profile.html  register-manager.html  register-player.html  tables.html  type-account.html  upgrade.html
app/user/tests/: test_api.py
apps/: urls.py
apps/user/: api.py
config/: asgi.py  settings.py  urls.py
lobbys/: consumers.py  routing.py  urls.py  views.py
lobbys/templates/: index.html
